# imgdup

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  Taskfile.yml  input.css  package-lock.json  package.json
assets/: tailwind.css
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  reference_image.rs
migration/: Cargo.toml  Taskfile.yml
migration/src/: lib.rs  m20250310_123143_reference_images.rs
src/: backend.rs  config.rs  di.rs  image_processing.rs  main.rs  utils.rs
src/adapter/: sqlite.rs
src/components/: home.rs  mod.rs
src/components/common/: mod.rs  toast.rs
src/components/home/: directory_selector.rs  mod.rs  search_result.rs
src/components/reference_images/: card.rs  mod.rs
src/models/: mod.rs  reference_image.rs
src/repositories/: mod.rs  reference_image_repository.rs
src/utils/: path.rs
