[package]
name = "imgdup"
version = "0.1.0"
authors = ["Takashicc <105186894+Takashicc@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
dioxus = { version = "0.6.0", features = ["fullstack"] }
image = { version = ">=0.21,<0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
img_hash = "3.2.0"
rayon = "1.10.0"
serde = "1.0.218"
walkdir = "2.5.0"

[features]
default = ["desktop"]
server = ["dioxus/server"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
