[package]
name = "imgdup"
version = "0.1.0"
authors = ["Takashicc <105186894+Takashicc@users.noreply.github.com>"]
edition = "2021"

[workspace]
members = ["entity", "migration"]

[workspace.dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
anyhow = "1.0.96"
serde = "1.0.218"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { version = "0.4.40", features = ["serde"] }
dioxus = { version = "0.6.0", features = ["fullstack"] }
image = { version = ">=0.21,<0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
img_hash = "3.2.0"
rayon = "1.10.0"
walkdir = "2.5.0"
log = "0.4.26"
tokio = "1.44.0"
dioxus-free-icons = { version = "0.9.0", features = ["lucide"] }
futures = "0.3.31"
async-std = "1.13.1"


[features]
default = ["desktop"]
server = ["dioxus/server"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
